--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,8 +26,11 @@ jobs:
       with:
         go-version: '1.21'
 
+    - name: Download
+      run: go mod download
+
     - name: Build
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v --race ./...
