--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,11 +26,8 @@ jobs:
       with:
         go-version: '1.21.0'
 
-    - name: Download
+    - name: Download Dependencies
       run: go mod download
-
-    - name: Build
-      run: go build -v ./...
 
     - name: Test
       run: go test -v --race ./...
