--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,5 +29,8 @@ jobs:
     - name: Download Dependencies
       run: go mod download
 
+    - name: Get
+      run: go get github.com/johnbenedictyan/polluter
+
     - name: Test
       run: go test -v --race ./...
